@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3344 2019/08/09 18:28:06 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3345 2019/08/09 18:28:57 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5467,3 +5467,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-whisker version 0.3.2 [brook 2019-08-09]
 	Added devel/R-ini version 0.3.1 [brook 2019-08-09]
 	Added devel/R-fs version 1.3.1 [brook 2019-08-09]
+	Added textproc/R-clisymbols version 1.2.0 [brook 2019-08-09]
